fix the monorepo struct and add rbac with permissions and types

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,13 +11,14 @@
     "build": "tsc"
   },
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    },
     "./schemas": {
       "types": "./dist/schemas/index.d.ts",
       "import": "./dist/schemas/index.js"
+    },
+
+    "./constants": {
+      "types": "./dist/constants/index.d.ts",
+      "import": "./dist/constants/index.js"
     }
   },
   "keywords": [],
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
+    "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
   }
 }
