add user model ,schema and methods

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "esnext" /* Specify what module code is generated. */,
 
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 
     /* Type Checking */
