--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
+    "@e-com/shared": "workspace:*",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "dotenv": "^17.2.1",
