--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -37,10 +37,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
-    "@vitest/ui": "^3.2.4",
     "mongodb-memory-server": "^10.2.0",
     "nodemon": "^3.1.10",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.4"
+    "typescript": "^5.8.3"
   }
 }
