--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "morgan": "^1.10.1",
+    "rotating-file-stream": "^3.2.7",
     "zod": "^4.0.10"
   },
   "devDependencies": {
