--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -12,9 +12,15 @@
     "esModuleInterop": true,
     "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+    "allowSyntheticDefaultImports": true,
 
     /* Type Checking */
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+
+  // "include": [
+  //   "src",
+  //   "src/types"         // <--- global type extensions like Express Request
+  // ],
 }
