removed dist folders, added msw, nav service , minimal fetch wrapper , etc

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,34 @@
 node_modules
 .env
 .git
+.env.development
+.env.production
+.env.testing
+
+
+# Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+dist
+dist/*
+**/dist/
+dist-ssr
+*.local
+
+packages/*/dist/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
