--- a/packages/user-frontend/package.json
+++ b/packages/user-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@e-com/shared": "workspace:*",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "class-variance-authority": "^0.7.1",
