--- a/packages/user-frontend/package.json
+++ b/packages/user-frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@e-com/shared": "workspace:*",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
@@ -21,7 +23,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
